--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -15,7 +15,11 @@
 
           <form class="upload-button" accept-charset-"UTF-8" action="<%= @trail.id %>/photos" class="new_photo" enctype="multipart/form-data" id="new_photo" method="POST">
             <input id="photo_trail_id" name="photo[trail_id]" type="hidden">
-            <input class="choose-photo" id="photo_image" name="photo[image]" type="file">
+
+            <div class="style-choose-photo"><i class="fa fa-camera-retro fa-2x">Upload Photo</i>
+              <input class="choose-photo" id="photo_image" name="photo[image]" type="file">
+            </div>
+
             <input class="submit-photo" name="commit" type="submit" value="Submit Photo">
           </form>
           <button class="comment-button">Comment</button>
