--- a/app/views/layouts/_comment.html.erb
+++ b/app/views/layouts/_comment.html.erb
@@ -8,8 +8,9 @@
   <div class="input difficulty">
     <label >How difficult was the trail?</label>
     <input type="range"  min=".1" max="2.9" step="0.1"required>
-    <label id="range"></label>
+    <label id="range"><strong></strong></label>
   </div>
+  <div class="difficulty-text"></div>
   <div class="input tip">
     <label >Tip</label>
     <textarea placeholder="key trail info other hikers have to know" name="tip" rows="3" maxlength="140" required></textarea>
