--- a/app/views/layouts/_comment.html.erb
+++ b/app/views/layouts/_comment.html.erb
@@ -8,7 +8,7 @@
   <div class="input difficulty">
     <label >How difficult was the trail?</label>
     <input type="range"  min=".1" max="2.9" step="0.1"required>
-    <label id="range"><strong></strong></label>
+    <label id="range"></label>
   </div>
   <div class="difficulty-text"></div>
   <div class="input tip">
