added sidebar, placed map, foot is good, text/icons 50% there

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -6,7 +6,11 @@ body {
 
 .footer {
   background-color: #133813;
-  height: 80px;
+  height: 8%;
+  z-index: 7;
+  position: absolute;
+  width: 100%;
+  bottom: 0px;
 }
 
 img[alt="Trailapi"] {
