--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -3,10 +3,13 @@
   margin-top: 35px;
   text-align: center;
   font-size: 45px;
-  font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: 'Merriweather', serif;
+  /*font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;*/
   text-transform: uppercase;
   font-weight: bold;
 }
+
+
 
 .purpose {
   line-height: 30px;
@@ -14,6 +17,7 @@
   margin: auto;
   margin-top: 30px;
   margin-bottom: 100px;
+  font-family: 'Merriweather', serif;
 }
 
 .home-description {
@@ -21,7 +25,8 @@
   margin-top: 10px;
   text-align: center;
   font-size: 18px;
-  font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: 'Merriweather', serif;
+  /*font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;*/
 }
 
 #current-location {
