--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -8,12 +8,13 @@
   </div>
   <div class="explore">
     <h3>Explore</h3>
+     <%= image_tag("boot100.png", :id => "boot") %>
     <p>Use the interactive map to explore vital and user-curated trail information including ratings, length, difficulty, and descriptions</p>
   </div>
   <div class="engage">
-    <h3>Explore</h3>
+    <h3>Engage</h3>
     <%= image_tag("heart100.png", :id => "heart") %>
-    <p>View and upload trail pictures</p>
+    <p>View and upload recent trail pictures, and browse through thousands of user-submitted comments for reviews, tips, and current trail conditions</p>
   </div>
   <input id="pac-input" class="controls" type="text" placeholder="Search Box">
 
