--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -3,9 +3,10 @@
   margin-top: 35px;
   text-align: center;
   font-size: 45px;
-  font-family: 'Merriweather', serif;
+  font-family: 'Ubuntu', sans-serif;
+  /*font-family: 'Merriweather', serif;*/
   /*font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;*/
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
   font-weight: bold;
 }
 
@@ -17,7 +18,8 @@
   margin: auto;
   margin-top: 30px;
   margin-bottom: 100px;
-  font-family: 'Merriweather', serif;
+  font-family: 'Ubuntu', sans-serif;
+  /*font-family: 'Merriweather', serif;*/
 }
 
 .home-description {
@@ -25,7 +27,8 @@
   margin-top: 10px;
   text-align: center;
   font-size: 18px;
-  font-family: 'Merriweather', serif;
+  font-family: 'Ubuntu', sans-serif;
+  /*font-family: 'Merriweather', serif;*/
   /*font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;*/
 }
 
