--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
     <%= image_tag("icon.png", :size => "60x60", :id => "icon") %>
-   <!--  <div id="title">TrekTracker</div> -->
+    <div id="title">Trailhead</div>
     <nav>
       <ul class="nav_right">
         <a class="logout-href" href="/logout"><li class="logout-button">Log Out</li></a>
