--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+  <!-- <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'> -->
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
    <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.3.7/slick.css"/>
 
@@ -11,7 +12,7 @@
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
 
-  <title>TrekTracker</title>
+  <title>Trailhead</title>
 
   <%= stylesheet_link_tag    'application' %>
   <%= javascript_include_tag 'application'%>
