--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -1,7 +1,7 @@
 
 
 
-<div class="opening">Find Your Path</div>
+<div class="opening"><strong>Find Your Path</strong></div>
 <div class="home-description">Discover new hikes from over 6,500 U.S. trails</div>
 
 <div class="current-location">
