--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -6,7 +6,7 @@
   font-family: 'Ubuntu', sans-serif;
   /*font-family: 'Merriweather', serif;*/
   /*font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;*/
-  /*text-transform: uppercase;*/
+  text-transform: uppercase;
   font-weight: bold;
 }
 
