almost finished forms and side bar

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
 
   <div class="center">
     <p class="message"></p>
-    <input type="text" placeholder="Email" name="email" required></input>
+    <input type="email" placeholder="Email" name="email" required></input>
     <input type="password" placeholder="Password" name="password" required></input>
   </div>
   <button type="submit" value="Sign In" name="signin">Sign In</button>
