--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -19,6 +19,67 @@
   margin-bottom: 5px;
 }
 
+/*trail form*/
+.trail-form{
+  display: none;
+  height: 70%;
+}
+.trail-form form{
+  height: 100%;
+}
+
+.create-trail-button{
+  border: 1px solid grey;
+  border-radius: 5px;
+  text-align: center;
+  background-color: green;
+}
+
+.create-trail-button:hover{
+  background-color: #32CD32;
+  color: white;
+  cursor: hand;
+  cursor: pointer;
+}
+
+.trail-form input{
+  width: 100%;
+  border: 3px solid #cccccc;
+  border-radius: 3px;
+  margin-bottom: 1.8em;
+  padding: 5px;
+}
+
+.trail-form-length input{
+  width: 55px;
+}
+
+.trail-form-description{
+  height: 45%;
+}
+
+.trail-form-description textarea{
+  width: 100%;
+  height: 80%;
+  border-radius: 3px;
+  border: 3px solid #cccccc;
+  padding: 5px;
+  background-image: url(bg.gif);
+  background-position: bottom right;
+}
+
+.trail-form button{
+  background-color: #005F6B;
+  padding: 10px;
+  border-radius: 5px;
+  color: white;
+}
+
+.trail-form button:hover{
+  background-color: #196F7A;
+}
+
+
 .home-description {
   position: relative;
   bottom: 14px;
