--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -11,15 +11,16 @@
 	  </div>
 	  <div class="explore">
 	    <h3>Explore</h3>
-	     <%= image_tag("boot100.png", :id => "boot") %>
+	     <%= image_tag("boots100.png", :id => "boots") %>
 	    <p>Use the interactive map to explore vital and user-curated trail information including ratings, length, difficulty, and descriptions</p>
 	  </div>
 	  <div class="engage">
 	    <h3>Engage</h3>
-	    <%= image_tag("heart100.png", :id => "heart") %>
+	    <%= image_tag("heart100.png", :size => "85x85", :id => "heart") %>
 	    <p>View and upload recent trail pictures, and browse through thousands of user-submitted comments for reviews, tips, and current trail conditions</p>
 	  </div> 
 	</div>
+
 	<div class="home-bottom">
 		<div class="create-trail-button">Create a Trail!</div>
 	</div>
