--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -83,6 +83,8 @@
     <% end %>
     <% end %>
     <% end %>
-    <div class="see-more-comments-button"><button>See More</button></div>
 
+    <% if @trail.comments != [] %>
+      <div class="see-more-comments-button"><button>See More</button></div>
+    <% end %>
 </div>
