--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -140,8 +140,9 @@
 .create-trail-button{
   border: 1px solid grey;
   border-radius: 5px;
-  padding: 8px;
+  padding: 10px;
   text-align: center;
+  border: 3px solid #cccccc;
   background-color: green;
 }
 
