fake a hover event using jquery mouseenter and mouseleave events for the upload photo button

--- a/app/assets/stylesheets/trails_show.css
+++ b/app/assets/stylesheets/trails_show.css
@@ -54,7 +54,7 @@ i.fa-camera-retro{
   padding: 0.2em;
   cursor: hand;
   cursor: pointer;
-  background-color: green;
+  background-color: #4A8A4A;
 }
 
 /*subimt photo button*/
