--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -7,7 +7,7 @@
 	  <div class="opening"><p>Find Your Path</p></div>
 	  <div class="home-description">Discover new hikes from over 6,500 U.S. trails</div>
 	  <div class="current-location">
-	  	<button class="button-current-location" type="button">Use current location</button>
+	  	<button class="button-current-location" type="button"><i class="fa fa-crosshairs fa-lg"></i> use current location</button>
 	  </div>
 	  <div class="explore">
 	    <h3>Explore</h3>
