added cancel button to create trail in side bar

--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -55,8 +55,8 @@
 			<textarea name="description" type="text" placeholder="write a detailed description of the trail here..."></textarea>
 			</div>
 
-			<button type="submit" name="trail-submit">Submit Trail</button>
-
+			<button class="submit-create-trail" type="submit" name="trail-submit">Submit Trail</button>
+			<button class="cancel-create-trail">Cancel</button>
 			</form>
 	</div>
 </div>
