--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -1,43 +1,49 @@
 <div class="content">
 <h1><%= flash[:notice] %></h1>
-  <div class="trail-basic-information">
-    <div class="trail-name"><h1><%= @trail.name %></h1></div>
-    <div class="rating">Rating: 
-      <% if @trail.rating == nil %>
-        <%= 0 %>
-      <% else %>
-        <% @trail.rating.to_i.times do %>
-          <i class="fa fa-tree"></i>
+  <div class="upperinfo">
+
+    <div class="trail-basic-information">
+
+      <div class="trail-name"><h1><%= @trail.name %></h1></div>
+
+      <div class="rating">Rating: 
+        <% if @trail.rating == nil %>
+          <%= 0 %>
+        <% else %>
+          <% @trail.rating.to_i.times do %>
+            <i class="fa fa-tree"></i>
+          <% end %>
         <% end %>
-      <% end %>
+      </div>
+
+      <div class="user-features">
+            <form class="upload-button" accept-charset-"UTF-8" action="<%= @trail.id %>/photos" class="new_photo" enctype="multipart/form-data" id="new_photo" method="POST">
+              <input id="photo_trail_id" name="photo[trail_id]" type="hidden">
+              <div class="style-choose-photo"><i class="fa fa-camera-retro fa-2x">Upload Photo</i>
+                <input class="choose-photo" id="photo_image" name="photo[image]" type="file">
+              </div>
+              <input class="submit-photo" name="commit" type="submit" value="Submit Photo">
+            </form>
+            <button class="comment-button">Comment</button>
+      </div>
+
     </div>
-    <div class="user-features">
 
-          <form class="upload-button" accept-charset-"UTF-8" action="<%= @trail.id %>/photos" class="new_photo" enctype="multipart/form-data" id="new_photo" method="POST">
-            <input id="photo_trail_id" name="photo[trail_id]" type="hidden">
-
-            <div class="style-choose-photo"><i class="fa fa-camera-retro fa-2x">Upload Photo</i>
-              <input class="choose-photo" id="photo_image" name="photo[image]" type="file">
-            </div>
-
-            <input class="submit-photo" name="commit" type="submit" value="Submit Photo">
-          </form>
-          <button class="comment-button">Comment</button>
-    </div>
   </div>
-
+    
     <div class="show-map">
       <div id="trail-map-canvas"></div>
     </div>
+    <div class="upperinfo">
+      <div class="trail-detailed-information">
 
-    <div class="trail-detailed-information">
+        <div class="trail-location"><%= @trail.city %>, <%= @trail.state %></div>
+        <div class="trail-metrics"><div class="trail-length">Length: <%= @trail.length %> miles</div><div class="trail-difficulty">Difficulty: <%= @trail.difficulty_in_words %></div></div>
 
-      <div class="trail-location"><%= @trail.city %>, <%= @trail.state %></div>
-      <div class="trail-metrics"><div class="trail-length">Length: <%= @trail.length %> miles</div><div class="trail-difficulty">Difficulty: <%= @trail.difficulty_in_words %></div></div>
+      </div>
 
+      <div class="description"><p><%= @trail.description %></p></div>
     </div>
-
-  <div class="description"><p><%= @trail.description %></p></div>
 
 </div>
   <% if @trail.photos != [] %>
