made the info window open to the proper width. added javascript to insert trail info after the response

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -209,3 +209,10 @@
 .cancel-create-trail:hover{
   background-color: #A9B5C5;
 }
+
+/*google maps info window*/
+div.new-trail-info{
+  width: 100%;
+  margin: 0;
+  overflow: hidden;
+}
