--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -83,11 +83,12 @@
   background-color: white;
 }
 
+/*actual map*/
 #map-canvas {
   z-index: 3;
-  height: 86%;
+  height: 88%;
   width: 100%;
-  margin: auto;
+  margin: 0 0 0 0;
   display: block;
 }
 
