--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -273,56 +273,107 @@ nav ul li a{
    padding: 12px 20px;
 }
 
+/*comment form styling*/
 .comment-form{
+  webkit-border-box: box-sizing;
   display: none;
-}
-
-.comment-form{
-  display: none;
-  border: 1px solid black;
-  background: white;
-  width: 60%;
-  margin-top: 0px;
+  border-radius: 5px;
+  border: 3px solid #cccccc;
+  background: #FBFFED;
+  width: 35%;
+  height: 600px;
+  margin-top: 2%;
 }
 
 .comment-form h3{
   text-align: center;
   margin: 0px;
   margin-top: 5%;
-  margin-left: 14%;
 }
 
+.comment-information{
+  width: 80%;
+  margin: 2% auto 0 auto;
+}
+
+div.input.rating {
+  width: 100%;
+  margin: 0;
+  margin-bottom: 1.2%
+}
+
+div.comment-rating{
+  margin: 0 auto;
+}
+
+
+div.input.difficulty {
+  margin: 0;
+  width: 100%;
+  margin-bottom: 1.2%
+}
+
+div.comment-difficulty{
+  width: 100%;
+}
+
+div.comment-difficulty-line{
+  margin: 0 auto;
+  text-align: center;
+}
+
+div.comment-range {
+  width: 100%;
+  margin: 10px auto;
+}
+
+div.comment-range input{
+  width: 100%;
+}
+
+div.slider{
+  width: 80%;
+  margin: 0 auto;
+}
+
+div.difficulty-text{
+  margin-bottom: 2%;
+}
+
+div.tip textarea, div.review textarea{
+  width: 100%;
+  height: 80%;
+  border-radius: 3px;
+  border: 3px solid #cccccc;
+  padding: 5px;
+  margin-bottom: 1%;
+}
+
+div.
+
+
 .comment-form button{
-  margin-left: 25%;
-  margin-bottom: 5%;
-  width: 60%;
-  height: 20%;
+
 }
 
 .comment-form .input {
-  display: block;
-  margin: 7% auto;
-  height: 30%;
+
 }
 
 .comment-form label{
-  float: left;
-  width: 15%;
-  margin-left: 5%;
-  margin-right: 5%;
+
 }
 
 .comment-form textarea{
-  width: 60%;
+  
 }
 
 .comment-form input{
-  width: 60%;
+  
 }
 
 .comment-form .input .rating{
-  width: 60%;
-  text-align: left;
+
 }
 
 .comment-form .fa-tree{
