--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -195,26 +195,33 @@ li{
 }
 
 .signin-button:hover{
-  background-color: #4DA64D;
+  background-color: hsl(120,34%,43%);
   color: white;
 }
 
 .signin-button {
-  background-color: green;
-  padding: 13px;
+  background-color: hsl(120,34%,33%);
   margin-right: 10px;
-  color: white;
+  font-size: 18px;
+  border-radius: 5px;
+  padding: 10px;
+  text-align: center;
+  border: 2px solid #cccccc;
 }
 
 .signup-button:hover{
-  background-color: #987E7E;
+  background-color: hsl(120,34%,43%);
   color: white;
 }
 
 .signup-button {
-  padding: 13px;
-  background-color: #7E5E5E;
-  color: white;
+  background-color: hsl(120,34%,33%);
+  margin-right: 10px;
+  font-size: 18px;
+  border-radius: 5px;
+  padding: 10px;
+  text-align: center;
+  border: 2px solid #cccccc;
 }
 
 #icon {
