--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -1,3 +1,4 @@
+<div class="trail-show">
 <div class="content">
 <h1><%= flash[:notice] %></h1>
   <div class="upperinfo">
@@ -31,15 +32,13 @@
 
   </div>
     
-    <div class="show-map">
+    <div class="show-map fixed-show">
       <div id="trail-map-canvas"></div>
     </div>
     <div class="upperinfo">
       <div class="trail-detailed-information">
-
         <div class="trail-location"><%= @trail.city %>, <%= @trail.state %></div>
         <div class="trail-metrics"><div class="trail-length">Length: <%= @trail.length %> miles</div><div class="trail-difficulty">Difficulty: <%= @trail.difficulty_in_words %></div></div>
-
       </div>
 
       <div class="description"><p><%= @trail.description %></p></div>
@@ -47,7 +46,7 @@
 
 </div>
   <% if @trail.photos != [] %>
-    <div class="trail-carousel">
+    <div class="trail-carousel fixed-show">
       <% @trail.photos.each do |photo|  %>
         <div class="trail-carousel-img"><img src=<%= photo.image_url(:thumb).to_s %>></img></div>
       <% end %>
@@ -58,7 +57,7 @@
       <% if @trail.comments != [] %>
       <% @trail.comments.order(id: :desc).each_with_index do |comment, index| %>
         <% if index < 5 %>
-        <div class="comment-section">
+        <div class="comment-section trail-show">
         <div class="one-comment" data-id="<%= comment.id %>">
           <div class="comment-top">
 
@@ -97,4 +96,5 @@
     <% unless @trail.comments.size < 5 %>
       <div class="see-more-comments-button"><button>See More</button></div>
     <% end %>
+</div>
 </div>
