37 examples, zero failures. had to rename the text input fields in the _header.html file in order for the tests to be able to distinguish between them. went from password to password-signup etc.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,8 +30,8 @@
   <div class="center">
     <p class="message"></p>
     <input type="text" placeholder="Username" name="username" required></input>
-    <input type="text" placeholder="Email" name="email" required></input>
-    <input type="password" placeholder="Password" name="password" required></input>
+    <input type="text" placeholder="Email" name="email-signup" required></input>
+    <input type="password" placeholder="Password" name="password-signup" required></input>
     <input type="password" placeholder="Password Confirmation" name="password_confirmation" required></input>
   </div>
   <button type="submit" value="Sign Up" name="signup">Sign Up</button>
