added tree rating method to trail model and trail show page

--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -10,9 +10,7 @@
         <% if @trail.rating == nil %>
           <%= 0 %>
         <% else %>
-          <% @trail.rating.to_i.times do %>
-            <i class="fa fa-tree"></i>
-          <% end %>
+          <%= @trail.rating_to_trees.html_safe %>
         <% end %>
       </div>
 
