added casey's changes to the show page

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -232,6 +232,8 @@ li{
 }
 
 header {
+  position: fixed;
+  top: 0px;
   display: inline-block;
   background-color: #143914;
   border: 1px solid black;
