--- a/app/assets/stylesheets/trails_show.css
+++ b/app/assets/stylesheets/trails_show.css
@@ -1,31 +1,86 @@
-/*new stufff*/
- * {
-  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-  box-sizing: border-box;
+/*CASEYS TRAIL SHOW================================================================*/
+.trail-show {
+  width: 960px;
+  margin: 0 auto;
 }
 
-.content h1 {
-  text-align: center;
-  font-size: 1.7em;
+.left-side {
+  position: fixed;
+  width: 460px;
+  height: 100%;
+  margin-top: 15px;
 }
 
-.rating {
-  text-align: center;
-  margin-bottom: 1.2em;
-
+.content {
+  margin-top: 70px;
+  width: 475px;
+  margin-left: 485px;
 }
 
-.rating label{
+#trail-map-canvas {
+  height: 350px;
+}
+
+.show-map {
+  background-color: #c4e3f5;
+  margin: auto;
+}
+
+
+.trail-basic-information{
+  display: block;
+  max-height: 350px;
+  overflow: scroll;
+}
+
+h3{
+  display: inline;
+}
+
+.hiker-photos{
+  margin-top: 15px;
+  margin-bottom: 10px;
+}
+
+
+.user-features{
+  display:inline;
+}
+.upload-button{
+  display:inline;
+  text-align: right;
+  width: 100%
+}
+.style-choose-photo{
+  display:inline;
+  float: right;
+  width: 50%;
+}
+.submit-photo{
+  display:none;
+}
+
+.hiker-commentaries{
+  margin-top: 15px;
+  margin-bottom: 10px;
+}
+.fa .fa-camera-retro{
   text-align: left;
 }
 
-.user-features{
-  width: 300px;
-  height: 30px;
-  margin: 0.1em auto 0.2em auto;
+.trail-carousel{
+  height: auto;
+  width: 90%;
+  margin-bottom: 30%;
+  margin: 0 auto;
 }
 
+.trail-carousel-img img{
+  width: 100%;
+  margin: 0 auto;
+}
+
+/*OTHER PEOPLES STUFF*/
 
 /*this is where the actual upload button is*/
 #photo_image{
@@ -53,7 +108,7 @@ i.fa-camera-retro{
   border: 1px solid grey;
   box-shadow: 0 1px 1px 0;
   border-radius: 5px;
-  padding: 0.2em;
+  padding: 0.1em;
   /*cursor: pointer;*/
   background-color: #4A8A4A;
   cursor: pointer;
@@ -65,21 +120,10 @@ i.fa-camera-retro:hover{
   cursor: pointer;
 }
 
-/*subimt photo button*/
-input.submit-photo{
-  /*margin-top: 0.4em;*/
-  display: none;
-  width: 121px;
-  font-size: 0.9em;
-  position: relative;
-  top: 0;
-  border-radius: 5px;
-  background-color: #e28011;
-}
-
 
 /*comment button*/
 .comment-button{
+  text-align: right;
   display: none;
   width: 115px;
   height: 25.5px;
@@ -96,103 +140,6 @@ input.submit-photo{
   background-color: #8BB3F4;
   color: white;
 }
-
-/*centers the upload and submit button*/
-form.upload-button{
-  display: inline-block;
-  /*vertical-align: middle;*/
-  margin-left: 1.6em;
-  width: 46%;
-  padding: 0;
-}
-
-
-.photo-text{
-  /*display: inline;*/
-  z-index: 2;
-  position: absolute;
-  /*text-align: center;*/
-  top: -45%;
-  padding: 0;
-  margin: 0;
-  /*opacity: 0;*/
-  font-size: 0.8em;
-}
-
-/*.choose-photo {
-  display: none;
-  width: 75%;
-  text-decoration: transparent;
-}
-.choose-photo{
-  padding-right: 1.5em;
-}*/
-
-#trail-map-canvas {
-  width: 300px;
-  height: 300px;
-  margin: 0 auto;
-}
-
-.show-map {
-  background-color: #c4e3f5;
-  width: 300px;
-  height: 300px;
-  margin: auto;
-}
-
-.trail-location{
-  text-align: center;
-  margin-top: 0.5em;
-  font-size: 1.4em;
-  margin-bottom: 0.5em;
-}
-
-.trail-metrics{
-  width: 300px;
-  margin: 0 auto;
-  margin-bottom: 2.8em;
-}
-
-.trail-length{
-  float: left;
-}
-
-.trail-difficulty{
-  float: right;
-}
-
-.description{
-  padding: 0px;
-  width: 80%;
-  margin: 0 auto;
-  text-align: left;
-  line-height: 1.5em;
-  font-size: 1.0em;
-}
-
-.trail-carousel{
-  height: 300px;
-  width: 80%;
-  margin: 0 auto;
-}
-
-.trail-carousel-img{
-  text-align: center;
-  width: 32%;
-}
-
-.slick-prev:before, .slick-next:before{
-  color: green;
-}
-
-.trail-carousel-img img{
-  margin: 45px auto 0 auto;
-  height: 12em;
-  width: 20em;
-}
-
-
 .comment-section{
   width: 100%;
   background-color: #f5f5f5;
@@ -264,7 +211,4 @@ form.upload-button{
 .see-more-comments-button {
   padding: 20px;
 }
-
-
-
 
