--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -1,101 +1,137 @@
-<div class="content">
-<h1><%= flash[:notice] %></h1>
-  <div class="upperinfo">
+<div class="trail-show">
 
-    <div class="trail-basic-information">
-
-      <div class="trail-name"><h1><%= @trail.name %></h1></div>
-
-      <div class="rating">Rating: 
-        <% if @trail.rating == nil %>
-          <%= 0 %>
-        <% else %>
-          <%= @trail.rating_to_trees.html_safe %>
-        <% end %>
+  <div class="left-side">
+    
+    <div class="show-map">
+      
+      <div id="trail-map-canvas">
       </div>
+    
+    </div>
+
+    <div class="hiker-photos">
+      <h3> Hikers' Photos </h3>
 
       <div class="user-features">
-            <form class="upload-button" accept-charset-"UTF-8" action="<%= @trail.id %>/photos" class="new_photo" enctype="multipart/form-data" id="new_photo" method="POST">
-              <input id="photo_trail_id" name="photo[trail_id]" type="hidden">
-              <div class="style-choose-photo"><i class="fa fa-camera-retro fa-2x">Upload Photo</i>
-                <input class="choose-photo" id="photo_image" name="photo[image]" type="file">
-              </div>
-              <input class="submit-photo" name="commit" type="submit" value="Submit Photo">
-            </form>
-            <button class="comment-button">Comment</button>
+        <form class="upload-button" accept-charset-"UTF-8" action="<%= @trail.id %>/photos" class="new_photo" enctype="multipart/form-data" id="new_photo" method="POST">
+            <input id="photo_trail_id" name="photo[trail_id]" type="hidden">
+            <div class="style-choose-photo"><i class="fa fa-camera-retro fa-2x">Upload Photo</i>
+            <input class="choose-photo" id="photo_image" name="photo[image]" type="file">
+            </div>
+            <input class="submit-photo" name="commit" type="submit" value="Submit Photo">
+        </form>
       </div>
+    </div>
+    
 
+    <div class="trail-carousel"> 
+      <% @trail.photos.each do |photo|  %>
+        <div class="trail-carousel-img"><img src=<%= photo.image_url(:thumb).to_s %>></img>
+        </div>
+      <% end %>
+    </div>
+      
+  </div>
+
+  <div class="content">
+
+    
+    <div class="upperinfo">
+
+      <div class="trail-basic-information">
+
+        <div class="trail-name"><h1><%= @trail.name %></h1>
+        </div>
+
+        <div class="rating">Rating: 
+          <% if @trail.rating == nil %>
+            <%= 0 %>
+          <% else %>
+            <% @trail.rating.to_i.times do %>
+              <i class="fa fa-tree"></i>
+            <% end %>
+          <% end %>
+        </div>
+
+        <div class="upperinfo">
+          <div class="trail-detailed-information">
+            <div class="trail-location"><%= @trail.city %>, <%= @trail.state %>
+            </div>
+          <div class="trail-metrics">
+            <div class="trail-length">Length: <%= @trail.length %> miles
+            </div>                         
+            <div class="trail-difficulty">Difficulty: <%= @trail.difficulty_in_words %>
+            </div>
+          </div>
+        </div>
+      
+        <div class="description"><p><%= @trail.description %></p>
+        </div>
+      </div> 
+    </div>
+
+      <div class="hiker-commentaries">
+        <h3> Hikers' Commentaries </h3>    
+          <div class="comment-button">Comment</div>
+      </div>
+        <div class="comments">
+        <% if @trail.comments != [] %>
+          <% @trail.comments.order(id: :desc).each_with_index do |comment, index| %>
+            <% if index < 5 %>
+              <div class="comment-section trail-show">
+                  <div class="one-comment" data-id="<%= comment.id %>">
+                
+                    <div class="comment-top">
+
+                      <div class="comment-top-right">rating: 
+                        <% comment.rating.times do %> 
+                        <i class="fa fa-tree"></i>
+                        <% end %>
+                        difficulty: <%=comment.difficulty_to_words %>
+                      </div>
+                    
+                    </div>
+                
+                    <div class="comment-review">
+                      
+                      <div class="comment-review-body">
+                        <p><%= comment.review %></p>
+                      </div>
+                
+                    </div>
+                
+                    <div class="comment-bottom">
+                  
+                      <div class="comment-tip">  
+                        <p><strong>Tip:</strong> <%= comment.tip %></p>
+                      </div>
+      
+                    <div class="comment-date-hiked">
+                    </div>
+                  
+                    <div class="comment-top-left">
+                      Authored by: <strong><%= comment.user.username %></strong> | date posted: <%= Date.parse(comment.created_at.to_s) %> | date hiked: <%= comment.date_hiked %>
+                    </div>
+
+                  </div>
+
+                </div>
+
+              </div>
+            
+            <% end %>
+          <% end %>
+        <% end %>
+
+        <% unless @trail.comments.size < 5 %>
+          <div class="see-more-comments-button"><button>See More</button></div>
+        <% end %>
+      </div> 
+    
     </div>
 
   </div>
+
     
-    <div class="show-map">
-      <div id="trail-map-canvas"></div>
-    </div>
-    <div class="upperinfo">
-      <div class="trail-detailed-information">
 
-        <div class="trail-location"><%= @trail.city %>, <%= @trail.state %></div>
-        <div class="trail-metrics"><div class="trail-length">Length: <%= @trail.length %> miles</div><div class="trail-difficulty">Difficulty: <%= @trail.difficulty_in_words %></div></div>
-
-      </div>
-
-      <div class="description"><p><%= @trail.description %></p></div>
-    </div>
-
-</div>
-  <% if @trail.photos != [] %>
-    <div class="trail-carousel">
-
-      <!-- add script tag for static map image -->
-      <div class="trail-carousel-img"><%= image_tag("google_map_marker.jpg") %></div>
-
-      <% @trail.photos.each do |photo|  %>
-        <div class="trail-carousel-img"><img src=<%= photo.image_url(:thumb).to_s %>></img></div>
-      <% end %>
-    </div>
-  <% end %>
-    </div>
-
-      <% if @trail.comments != [] %>
-      <% @trail.comments.order(id: :desc).each_with_index do |comment, index| %>
-        <% if index < 5 %>
-        <div class="comment-section">
-        <div class="one-comment" data-id="<%= comment.id %>">
-          <div class="comment-top">
-
-            <div class="comment-top-right">
-              rating: 
-              <%= comment.rating_to_trees.html_safe  %> 
-              
-              difficulty: <%=comment.difficulty_to_words %>
-            </div>
-          </div>
-          <div class="comment-review">
-            <div class="comment-review-body">
-              <p><%= comment.review %></p>
-            </div>
-          </div>
-          <div class="comment-bottom">
-            <div class="comment-tip">
-              <p><strong>Tip:</strong> <%= comment.tip %></p>
-            </div>
-            <div class="comment-date-hiked">
-
-            </div>
-            <div class="comment-top-left">
-              Authored by: <strong><%= comment.user.username %></strong> | date posted: <%= Date.parse(comment.created_at.to_s) %> | date hiked: <%= comment.date_hiked %>
-            </div>
-
-          </div>
-
-        </div>
-      </div>
-    <% end %>
-    <% end %>
-    <% end %>
-
-    <% unless @trail.comments.size < 5 %>
-      <div class="see-more-comments-button"><button>See More</button></div>
-    <% end %>
 </div>
