--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -2,7 +2,8 @@
   color: #303030;
   text-align: center;
   font-size: 30px;
-  font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: 'Ubuntu', sans-serif;
+  /*font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;*/
   text-transform: uppercase;
   font-weight: bold;
 }
@@ -65,7 +66,8 @@
   color: #303030;
   text-align: center;
   font-size: 18px;
-  font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: 'Ubuntu', sans-serif;
+  /*font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;*/
 }
 
 #current-location {
@@ -95,6 +97,7 @@
   text-align: center;
   color: #161616;
   font-size: 1.5em;
+  /*font-family: 'Ubuntu', sans-serif;*/
 }
 
 #heart, #boots {
