--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -64,3 +64,7 @@
 			</form>
 	</div>
 </div>
+
+<div class="home-footer">
+  <%= image_tag("trailapi.png", :size => "174x60", :id => "icon") %>
+</div>
