--- a/app/assets/stylesheets/trails_show.css
+++ b/app/assets/stylesheets/trails_show.css
@@ -31,7 +31,8 @@
 }
 
 .show-map {
-  background-color: #c4e3f5;
+  background-color: hsl(0,0%,94%);
+  border: 1px solid black;
   margin: auto;
   height: 400px;
 }
@@ -79,10 +80,10 @@ i.fa-camera-retro{
   cursor: pointer;
 }
 
-i.fa-camera-retro:hover{
+/*i.fa-camera-retro:hover{
   position: absolute;
   cursor: pointer;
-}
+}*/
 
 .user-features{
   display:inline;
@@ -152,10 +153,7 @@ i.fa-camera-retro:hover{
   border-radius: 5px;
 }
 
-.comment-button:hover{
-  background-color: #8BB3F4;
-  color: white;
-}
+
 .comment-section{
   width: 100%;
   background-color: #f5f5f5;
@@ -226,5 +224,17 @@ i.fa-camera-retro:hover{
 
 .see-more-comments-button {
   padding: 20px;
+}
+
+.comment-button:hover, .submit-photo:hover{
+  background-color: hsl(120,48%,45%);
+  color: white;
+  cursor: hand;
+}
+
+.upload-button:hover{
+  background-color: hsl(220,48%,35%);
+  color: white;
+  cursor: hand;
 }
 
