--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -16,7 +16,7 @@
         <form class="upload-button" accept-charset-"UTF-8" action="<%= @trail.id %>/photos" class="new_photo" enctype="multipart/form-data" id="new_photo" method="POST">
             <input id="photo_trail_id" name="photo[trail_id]" type="hidden">
             <div class="style-choose-photo">
-              <i class="fa fa-camera-retro fa-2x">Upload Photo</i>
+              <i class="fa fa-camera-retro fa-2x"> Upload Photo</i>
             <input class="choose-photo" id="photo_image" name="photo[image]" type="file">
             </div>
             <input class="submit-photo" name="commit" type="submit" value="Submit Photo">
@@ -72,10 +72,13 @@
     </div>
 
       <div class="hiker-commentaries">
-        <h3> Hikers' Commentaries </h3>    
-          <div class="comment-button">Comment</div>
+        <h3> Hikers' Commentaries </h3><div class="comment-button"><i class="fa fa-pencil"> Comment</i></div>
       </div>
+
         <div class="comments">
+        <% if @trail.comments == [] %>
+          <h4>Be the first to comment on this trail.</h4>
+        <% end %>
         <% if @trail.comments != [] %>
           <% @trail.comments.order(id: :desc).each_with_index do |comment, index| %>
             <% if index < 5 %>
