added the new engage icon in the project

--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -12,12 +12,12 @@
 	  <div class="home-description">Discover new hikes from over 6,500 U.S. trails</div>
 	  <div class="explore">
 	    <h3>Explore</h3>
-	     <%= image_tag("boots100.png", :id => "boots") %>
+	     <%= image_tag("boots100.png", :id => "boot") %>
 	    <p>Use the map to find and plan your next hike no matter where you’re headed. See detailed trail information from trail reviews, photos and must-have tips to current trail conditions - all curated content from other hikers like you.</p>
 	  </div>
 	  <div class="engage">
 	    <h3>Engage</h3>
-	    <%= image_tag("heart100.png", :size => "85x85", :id => "heart") %>
+	    <%= image_tag("engage_icon_resized.png", :size => "85x85", :id => "engage") %>
 	    <p>Find trails you’ve hiked and engage with others who’ve traveled the same path. Leave comments, write reviews, and upload your photos.</p>
 	  </div> 
 	</div>
