--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -9,23 +9,25 @@
 	
 	<div class="home-top">
 	  <div class="opening"><p>Find Your Path</p></div>
-	  <div class="home-description">Discover new hikes from over 6,500 U.S. trails</div>
+	  <div class="home-description">Discover new hikes from over 6,500 U.S. trails.</div>
 	  <div class="explore">
-	    <h3>Explore</h3>
-	     <%= image_tag("boots100.png", :id => "boot") %>
+	    <div class="explore-title"><h3>Explore</h3></div>
+	    <div class="explore-image"> <%= image_tag("boots100.png", :id => "boot") %></div>
 	    <p>Use the map to find and plan your next hike no matter where you’re headed. See detailed trail information from trail reviews, photos and must-have tips to current trail conditions - all curated content from other hikers like you.</p>
 	  </div>
 	  <div class="engage">
-	    <h3>Engage</h3>
-	    <%= image_tag("engage_icon_resized.png", :size => "85x85", :id => "engage") %>
+	    <div class="engage-title"><h3>Engage</h3></div>
+	   <div class="engage-image"><%= image_tag("engage_icon_resized.png", :size => "85x85", :id => "engage") %></div>
 	    <p>Find trails you’ve hiked and engage with others who’ve traveled the same path. Leave comments, write reviews, and upload your photos.</p>
 	  </div> 
 	</div>
-	<div class="current-location">
+	
+	
+	<div class="home-bottom">
+		<div class="current-location">
 	  <div class="all-trails-button" type="button"> See All Trails</div>
 	</div>
-	<div class="create-trail-info"><p>Know of a trail but don’t see it on our map? We’ll take care of that.</p></div>
-	<div class="home-bottom">
+		<div class="create-trail-info"><p>Know of a trail but don’t see it on our map? We’ll take care of that.</p></div>
 		<div class="create-trail-button">Create A Trail</div>
 	</div>
 	<div class="trail-form">
