--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,7 @@
-<header>
-    <%= image_tag("icon.png", :size => "60x60", :id => "icon") %>
-   <!--  <div id="title">TrekTracker</div> -->
+<header> 
+    <div id="title-image"><%= image_tag("nav_bar_logo.png", :id => "engage") %></div>
+      <h1 id="title">TrailHead</h1>
+
     <nav>
       <ul class="nav_right">
         <a class="logout-href" href="/logout"><li class="logout-button">Log Out</li></a>
