--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header> 
-    <div id="title-image"><%= image_tag("nav_bar_logo.png", :id => "engage") %></div>
-      <h1 id="title">TrailHead</h1>
+    <div id="title-image" class="title-click"><%= image_tag("nav_bar_logo.png", :id => "engage") %></div>
+      <h1 id="title" class="title-click">TrailHead</h1>
 
     <nav>
       <ul class="nav_right">
