--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
 
-  <title>TrekTracker</title>
+  <title>TrailHead</title>
 
   <%= stylesheet_link_tag    'application' %>
   <%= javascript_include_tag 'application'%>
